--- a/webkehitys/tehtava6/index.css
+++ b/webkehitys/tehtava6/index.css
@@ -1,7 +1,68 @@
+#container{
+	width:100%;
+	height:1000px;
+}
+
+.infoboxbtn:hover{
+	background-color:blue;
+}
+
 #header{
-	height:100px;
+	height:200px;
 	margin-left:10px;
 	margin-right:10px;
 	background-color:yellow;
 	width:auto;
+}
+.content{
+    float:left;
+    margin-left:10px;
+    height:400px;
+    width:20%;
+    background-color:black;
+}
+
+#facttext{
+	margin-top:0;
+    background-color:red;
+    height:100px;
+    width:100%;
+}
+
+#factbox{
+    height:150px;
+    width:90%;
+    background-color:black;
+	margin:auto;
+}
+
+.infoboxbtn{
+    font-size:16px;
+    width:40%;
+    margin:auto;
+    text-align:center;
+    box-shadow:10px 10px 30px 8px #000000;
+}
+
+#btncontainer{
+    text-align:center;
+    display:grid;
+    width:100%;
+    height:35px;
+}
+
+#infoframe{
+	background-color:grey;
+	width:20%;
+	border:2px blue;
+	margin-left:10px;
+	height:200px;
+	float:left;
+}
+
+#imgcontainer{
+	width:50%;
+	height:250px;
+	background-color:blue;
+	float:left;
 }
