--- a/webkehitys/tehtava6/index.css
+++ b/webkehitys/tehtava6/index.css
@@ -1,9 +1,21 @@
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
 #container{
-	width:100%;
 	height:1000px;
 }
 
-.infoboxbtn:hover{
+.randomfactbtn:hover{
 	background-color:blue;
 }
 
@@ -14,44 +26,35 @@
 	background-color:yellow;
 	width:auto;
 }
-.content{
-    float:left;
-    margin-left:10px;
-    height:400px;
-    width:20%;
-    background-color:black;
-}
 
-#facttext{
+.facttext{
 	margin-top:0;
     background-color:red;
     height:100px;
-    width:100%;
 }
 
-#factbox{
+.factbox{
     height:150px;
     width:90%;
     background-color:black;
 	margin:auto;
+    position:relative;
 }
 
-.infoboxbtn{
-    font-size:16px;
-    width:40%;
+.sitebuttons{
+    font-size:12px;
     margin:auto;
     text-align:center;
     box-shadow:10px 10px 30px 8px #000000;
 }
 
-#btncontainer{
+.btncontainer{
     text-align:center;
     display:grid;
-    width:100%;
     height:35px;
 }
 
-#infoframe{
+.infoframe{
 	background-color:grey;
 	width:20%;
 	border:2px blue;
@@ -60,9 +63,18 @@
 	float:left;
 }
 
-#imgcontainer{
-	width:50%;
-	height:250px;
-	background-color:blue;
-	float:left;
+.imgcontainer{
+	height:auto;
+}
+
+.images{
+	max-height:100%;
+	max-width:100%;
+}
+
+
+@media only screen and (max-width: 768px) {
+  [class*="col-"] {
+    width: 100%;
+  }
 }
