--- a/webkehitys/tehtava6/index.css
+++ b/webkehitys/tehtava6/index.css
@@ -1,3 +1,19 @@
+@media only screen and (max-width : 600px){
+    p{
+        font-size:1rem;
+    }
+    h1{
+        font-size:1rem;
+    }
+    h2{
+        font-size:1rem;
+    }
+    body{
+        background-color:blue
+    }
+}
+
+
 body{
     margin: 0;
     font-size:18px;
@@ -6,6 +22,7 @@ body{
 
 p{
     font-color:blue;
+    margin-left:10px;
 }
 
 h1{
@@ -14,13 +31,14 @@ h1{
 
 h2{
     font-size:1.2rem;
+    margin-left:10px
 }
 
 button{
     background-color:blue;
     border:solid 2px black;
-    padding:10px;
-    margin:auto;
+    padding:5px;
+    margin:10px 10px 10px 10px;
 }
 
 header{
@@ -28,6 +46,11 @@ header{
     background-color:red;
     padding: 45px 0;
     text-align:center;
+}
+
+img{
+    width:100%;
+    margin:auto;
 }
 
 .container{
@@ -55,7 +78,7 @@ header{
 }
 
 .randominfo{
-    height:450px;
+    height:510px;
     border:2px solid red;
 }
 
@@ -63,7 +86,12 @@ header{
     padding:25px 0;
 }
 
-#randomfact{
+
+.randomfactgenerator{
     
 }
 
+.imgcontainer{
+    text-align:center;
+
+}
