--- a/webkehitys/tehtava6/index.css
+++ b/webkehitys/tehtava6/index.css
@@ -13,6 +13,16 @@
     }
 }
 
+@media only screen and(max-width:1200px){
+    body
+}
+
+
+
+
+
+
+
 
 body{
     margin: 0;
@@ -51,6 +61,7 @@ header{
 img{
     width:100%;
     margin:auto;
+    min-height:"350px";
 }
 
 .container{
