--- a/webkehitys/tehtava6/index.css
+++ b/webkehitys/tehtava6/index.css
@@ -1,4 +1,21 @@
-@media only screen and (max-width : 600px){
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+@media only screen and (max-width : 1200px){
+    .randominfo{
+        float:none;
+        margin:0 auto; 
+    }
     p{
         font-size:1rem;
     }
@@ -8,21 +25,16 @@
     h2{
         font-size:1rem;
     }
-    body{
+    /*body{
         background-color:blue
+    }*/
+    [class*="col-"]{
+        width:80%;
+        margin-left:10%;
+        margin-right:10%;
+        float:none;
     }
 }
-
-@media only screen and(max-width:1200px){
-    body
-}
-
-
-
-
-
-
-
 
 body{
     margin: 0;
@@ -64,19 +76,16 @@ img{
     min-height:"350px";
 }
 
-.container{
-    border:2px solid magenta;
-    margin-left:2%;
-    margin-right:2%;
-}
-
 .innercontainer{
+    margin-left:10px;
+    height:650px;
     margin:0 auto;
-    border: 2px solid magenta;
+    width:90%;
+    border:2px solid magenta;
 }
    
 #randomtextbox{
-    height:350px;
+    height:250px;
     padding:5px;
 }
 
@@ -88,8 +97,29 @@ img{
 
 .randominfo{
     float:left;
-    height:310px;
+    height:450px;
     border:2px solid red;
+}
+
+
+
+.navbar{
+    height:40px;
+    width:100%;
+    padding:0;
+    background-color:blue;
+    list-style:none;
+    text-align:center;
+    margin:0;
+}
+
+.navbar li{
+    display:inline;
+}
+
+.navbar a{
+    display:inline-block;
+    padding:10px;
 }
 
 .infosection{
@@ -101,19 +131,6 @@ img{
     
 }
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
 .imgcontainer{
     text-align:center;
     float:left;
@@ -121,13 +138,3 @@ img{
     max-height:500px;
     border:2px solid blue;
 }
-
-
-
-
-
-
-
-
-
-
