--- a/webkehitys/tehtava6/index.css
+++ b/webkehitys/tehtava6/index.css
@@ -99,7 +99,6 @@ h2{
 button{
     background-color:white;
     border:solid 2px black;
-    padding:5px;
     margin:10px 10px 10px 10px;
 }
 
@@ -118,8 +117,8 @@ header{
 }
 
 img{
-    max-width:100%;
-    max-height:100%;
+    max-width:80%;
+    max-height:80%;
     min-height:30%;
     min-width:30%;
     margin:0 auto;
@@ -138,7 +137,8 @@ img{
    
 #randomtextbox{
     height:250px;
-    padding:5px;
+    padding:3px;
+	border: 2px solid black;
 }
 
 
@@ -149,8 +149,8 @@ img{
 
 .randominfo{
     float:left;
-    height:450px;
-    border:2px solid red;
+    height:420px;
+    border:2px solid white;
 }
 
 .navbar{
@@ -170,8 +170,9 @@ img{
 }
 
 .leaderboard{
-    height:350px;
+    height:420px;
     float:left;
+	border:2px solid white;
 }
 
 
@@ -191,10 +192,11 @@ img{
 }
 
 .imgcontainer{
+	background-color: rgb(128,128,128);
     text-align:center;
     float:left;
     min-height:110px;
     max-height:500px;
-    border:2px solid blue;
+    border:2px solid black;
 }
 
