--- a/webkehitys/tehtava7/css/base.css
+++ b/webkehitys/tehtava7/css/base.css
@@ -57,7 +57,7 @@ body{
 	/*background: linear-gradient(212deg, rgba(2,0,36,1) 0%, rgba(139,13,17,1) 100%); */
 }
 #navigationbar{
-	background: rgb(244,244,244,1);
+	background: rgb(0,255,255,1);
 }
 
 @media screen and (min-width: 100px){
@@ -85,10 +85,6 @@ body{
 }
 
 @media screen and (min-width: 992px){
-	/*.navbar.navbar-default .navbar-nav{
-		border:5px solid black;
-	}
-*/
 	.navbar-nav{
 		margin-left: -1em;
 	}
@@ -143,6 +139,10 @@ body{
 	margin-top:10px;
 	margin-bottom:10px;
 	box-shadow: 0px 10px 25px black;
+}
+
+.navbar{
+	background-color: white;
 }
 
 .navbar-nav > .nav-item > .nav-link{
