--- a/webkehitys/tehtava7/css/ohjelmisto.css
+++ b/webkehitys/tehtava7/css/ohjelmisto.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 722px){
-    .spaces{display:none;}
+    .spaces{font-size:0.4rem;}
     .musicbuttons{font-size: 1.0rem;}
 }
 
@@ -25,10 +25,13 @@
     display:none;
     background-color: red;
     margin:0 auto;
-    text-align: center;
 }
 
 .showtable{
-    margin-left:auto;
-    margin-right:auto;
+    border:1px solid black;
+}
+
+.tabledesc{
+    text-align: center;
+    border:1px solid black;
 }
