--- a/webkehitys/tehtava7/css/yhteystiedot.css
+++ b/webkehitys/tehtava7/css/yhteystiedot.css
@@ -1,3 +1,11 @@
 .partybuttons{
     margin:10px 10px 10px 10px;
 }
+
+#submitbuttons{
+    padding-left:10px;
+    padding-right:10px;
+    font-size: 24px;
+    background-color: white; 
+    border-radius:4px;
+}
